[package]
name = "stalkermap-tcp"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "TCP utilities with custom handshakes for multiple port‑scanning techniques"
repository = "https://github.com/seakerOner/stalkermap-tcp"
readme = "README.md"
keywords = ["network", "tcp"]

[dependencies]
libc = "0.2.177"
