[package]
name = "stalkermap-tcp"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "TCP utilities with custom handshakes for multiple port‑scanning techniques"
repository = "https://github.com/seakerOner/stalkermap-tcp"
readme = "README.md"
keywords = ["network", "tcp"]

[dependencies]
libc = "0.2.177"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["sync"]}

 [dev-dependencies]
 tokio = { version = "1.48.0", features = ["rt", "macros"]}
